--- a/about.html
+++ b/about.html
@@ -119,15 +119,13 @@
           <div class="col-md-12 col-lg-7 ml-lg-auto py-5">
             <span class="sub-title">Our Values</span>
             <h2 class="font-weight-bold text-black font-secondary mb-4">Sharing Our Values Through Art</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aliquid eius facilis voluptatem eligendi magnam accusamus vel commodi asperiores sint rem reprehenderit nobis nesciunt veniam qui fugit doloremque numquam quod.</p>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora distinctio ipsam nesciunt recusandae repellendus asperiores amet.</p>  
+            <p>I have a passion to create with lots of colour and fluidity and function. My art is affordable and vivid. My classes are easy to follow and you will have this knowledge for life, as I send all my students home with a handout of the subject taught. Teaching others my passion has led me to feel much more fulfilled in all aspects of my life.</p>
 
             <ul class="list-unstyled ul-check primary">
-              <li>Lorem ipsum dolor sit amet consectetur</li>
-              <li>Consectetur tempora distinctio ipsam</li>
-              <li>Recusandae repellendus asperiores amet</li>
-              <li>Lorem ipsum dolor sit amet consectetur</li>
-              <li>Consectetur tempora distinctio ipsam</li>
+              <li>The creative process brings us together as a community</li>
+              <li>Art helps us to overcome stress and makes us better people</li>
+              <li>Teaching others to be creative is one of life's most fulfilling activities</li>
+              <li>We value diversity and welcome everyone of all backgrounds</li>
             </ul>
           </div>
         </div>
